# src/api/UserRouter.ts
@@ -1,6 +1,6 @@
-import { Router } from 'express';
-import { UserFacade } from '../facade';
-import { logger } from '../config/logger/logger';
+import { Router } from "express";
+import { UserFacade } from "../facade";
+import { logger } from "../config/logger/logger";
 
 /**
  * @constant {express.Router}
@@ -41,7 +41,7 @@ const router: Router = Router();
  *              example: rjaforever@gmail.com
  *              message: Users
  */
-router.get('', UserFacade.findAll);
+router.get("", UserFacade.findAll);
 
 /**
  * POST method route
@@ -72,7 +72,7 @@ router.get('', UserFacade.findAll);
  *            schema:
  *              $ref: '#/components/schemas/ErrorTo'
  */
-router.post('', UserFacade.create);
+router.post("", UserFacade.create);
 
 // /**
 //  * GET method route
@@ -96,6 +96,79 @@ router.post('', UserFacade.create);
 //     res.send('pong');
 //     logger.info("(%s) - Sending Response: %s","UserRouter.ts",{data:"pong"});
 // });
+
+/**
+ * DELETE method route
+ * @example http://localhost:PORT/users
+ * @swagger
+ * /users/{id}/id:
+ *  delete:
+ *    description: delete Users
+ *    tags: ["Users"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    responses:
+ *      200:
+ *        description: All Users
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.delete("/:id/id", UserFacade.delete_user);
+
+/**
+ * PATCH method route
+ * @example http://localhost:PORT/users
+ * @swagger
+ * /users/{id}/id:
+ *  patch:
+ *    description: update Users
+ *    tags: ["Users"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    requestBody:
+ *      description: object user
+ *      required: true
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/UserTo'
+ *    responses:
+ *      200:
+ *        description: All Users
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/UserTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.patch("/:id/id", UserFacade.update_user);
 
 /**
  * @export {express.Router}
